# recoco

./: .env.lib_debug  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS_LICENSE_AGREEMENT.md  Cargo.lock.license  Cargo.toml  DEPENDENCY_UPDATE.md  DOCUMENTATION_SITE_REVIEW.md  LICENSE  NOTICE.md  README.md  REUSE.toml  REVIEW_SUMMARY.md  cliff.toml  hk.pkl  issue-56-suggested-body.md  mise.toml
.cargo/: config.toml
.github/: MAINTENANCE_TEAM_PLAN.md  SECURITY.md  _upstream_agent_prompt.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
.github/commands/: gemini-invoke.toml  gemini-review.toml  gemini-scheduled-triage.toml  (+1 more)
.serena/: .gitignore  project.yml
assets/: recoco.webp.license
benchmarks/: .gitignore  README.md  compare.py  generate_data.py
crates/core/: Cargo.toml
crates/core/src/: lib.rs  prelude.rs
crates/core/src/engine/: app.rs  component.rs  context.rs  environment.rs  execution.rs  function.rs  id_sequencer.rs  logic_registry.rs  mod.rs  profile.rs  runtime.rs  stats.rs  target_state.rs  txn_batcher.rs
crates/core/src/inspect/: db_inspect.rs  mod.rs
crates/core/src/state/: db_schema.rs  mod.rs  stable_path.rs  stable_path_set.rs  target_state_path.rs
crates/recoco/: Cargo.toml
crates/recoco-core/: Cargo.toml  README.md
crates/recoco-core/benches/: transient_flow.rs
crates/recoco-core/examples/: custom_op.rs  detect_lang.rs  progress_watching.rs
crates/recoco-core/src/: lib.rs  lib_context.rs  prelude.rs  server.rs  settings.rs
crates/recoco-core/src/base/: duration.rs  field_attrs.rs  json_schema.rs  mod.rs  schema.rs  spec.rs  value.rs
crates/recoco-core/src/builder/: analyzed_flow.rs  analyzer.rs  exec_ctx.rs  flow_builder.rs  mod.rs  plan.rs
crates/recoco-core/src/execution/: app.rs  db_tracking.rs  db_tracking_setup.rs  dumper.rs  evaluator.rs  indexing_status.rs  live_updater.rs  memoization.rs  mod.rs  row_indexer.rs  source_indexer.rs  stats.rs  txn_batcher.rs
crates/recoco-core/src/llm/: anthropic.rs  bedrock.rs  gemini.rs  litellm.rs  mod.rs  novita.rs  ollama.rs  openai.rs  openrouter.rs  vllm.rs  voyage.rs
crates/recoco-core/src/ops/: factory_bases.rs  interface.rs  mod.rs  registration.rs  registry.rs  sdk.rs
crates/recoco-core/src/ops/functions/: detect_program_lang.rs  embed_text.rs  extract_by_llm.rs  mod.rs  parse_json.rs  split_by_separators.rs  split_recursively.rs  test_utils.rs
crates/recoco-core/src/ops/shared/: mod.rs  postgres.rs  split.rs
crates/recoco-core/src/ops/sources/: amazon_s3.rs  azure_blob.rs  google_drive.rs  local_file.rs  mod.rs  postgres.rs
crates/recoco-core/src/ops/sources/shared/: mod.rs  pattern_matcher.rs
crates/recoco-core/src/ops/targets/: kuzu.rs  ladybug.rs  mod.rs  neo4j.rs  postgres.rs  qdrant.rs
crates/recoco-core/src/ops/targets/shared/: mod.rs  property_graph.rs  table_columns.rs
crates/recoco-core/src/service/: flows.rs  mod.rs  query_handler.rs
crates/recoco-core/src/setup/: auth_registry.rs  components.rs  db_metadata.rs  driver.rs  flow_features.rs  mod.rs  states.rs
crates/recoco-splitters/: Cargo.toml  README.md
crates/recoco-splitters/benches/: splitting.rs
crates/recoco-splitters/src/: by_separators.rs  lib.rs  output_positions.rs  pattern_matcher.rs  prog_langs.rs  recursive.rs
crates/recoco-splitters/src/split/: by_separators.rs  mod.rs  output_positions.rs  recursive.rs
crates/recoco-utils/: Cargo.toml  README.md
crates/recoco-utils/src/: batching.rs  bytes_decode.rs  db.rs  deser.rs  error.rs  fingerprint.rs  http.rs  immutable.rs  lib.rs  prelude.rs  retryable.rs  str_sanitize.rs  yaml_ser.rs
crates/recoco/examples/: README.md  custom_op.rs  detect_lang.rs  file_processing.rs  progress_watching.rs  transient.rs
crates/recoco/src/: lib.rs  lib_context.rs  prelude.rs  server.rs  settings.rs
crates/recoco/src/base/: duration.rs  field_attrs.rs  json_schema.rs  mod.rs  schema.rs  spec.rs  value.rs
crates/recoco/src/builder/: analyzed_flow.rs  analyzer.rs  exec_ctx.rs  flow_builder.rs  mod.rs  plan.rs
crates/recoco/src/execution/: db_tracking.rs  db_tracking_setup.rs  dumper.rs  evaluator.rs  indexing_status.rs  live_updater.rs  memoization.rs  mod.rs  row_indexer.rs  source_indexer.rs  stats.rs
crates/recoco/src/llm/: anthropic.rs  bedrock.rs  gemini.rs  litellm.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  vllm.rs  voyage.rs
crates/recoco/src/ops/: factory_bases.rs  interface.rs  mod.rs  registration.rs  registry.rs  sdk.rs
crates/recoco/src/ops/functions/: detect_program_lang.rs  embed_text.rs  extract_by_llm.rs  mod.rs  parse_json.rs  split_by_separators.rs  split_recursively.rs  test_utils.rs
crates/recoco/src/ops/shared/: mod.rs  postgres.rs  split.rs
crates/recoco/src/ops/sources/: amazon_s3.rs  azure_blob.rs  google_drive.rs  local_file.rs  mod.rs  postgres.rs
crates/recoco/src/ops/sources/shared/: mod.rs  pattern_matcher.rs
crates/recoco/src/ops/targets/: kuzu.rs  mod.rs  neo4j.rs  postgres.rs  qdrant.rs
crates/recoco/src/ops/targets/shared/: mod.rs  property_graph.rs  table_columns.rs
crates/recoco/src/service/: flows.rs  mod.rs  query_handler.rs
crates/recoco/src/setup/: auth_registry.rs  components.rs  db_metadata.rs  driver.rs  flow_features.rs  mod.rs  states.rs
crates/recoco_splitters/: Cargo.toml
crates/recoco_splitters/src/: lib.rs  prog_langs.rs
crates/recoco_splitters/src/split/: mod.rs  recursive.rs
crates/recoco_utils/: Cargo.toml
crates/recoco_utils/src/: batching.rs  bytes_decode.rs  concur_control.rs  db.rs  deser.rs  error.rs  fingerprint.rs  http.rs  immutable.rs  lib.rs  prelude.rs  retryable.rs  str_sanitize.rs  yaml_ser.rs
dev/: README.md  major_fork_guide.md  neo4j.yaml  postgres.yaml  run_cargo_test.sh  sync_upstream_ops.py
docs/: API.md  dependency-update-analysis.md  v1-api-design.md  v1-way-ahead.md
site/: .env.development  .gitignore  README.md  astro.config.mjs  biome.jsonc  mise.toml  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
(+73 files in other folders)
