# SPDX-FileCopyrightText: 2025-2026 CocoIndex (upstream)
# SPDX-FileContributor: CocoIndex Contributors
#
# SPDX-FileCopyrightText: 2026 Knitli Inc. (ReCoco)
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "3"
members = [
  "crates/recoco",
  "crates/recoco-core",
  "crates/recoco-splitters",
  "crates/recoco-utils"
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
description = "A Rust-only fork of CocoIndex, a modular, high-performance ETL and data transformation library."
repository = "https://github.com/knitli/recoco"
license = "Apache-2.0"
keywords = ["ai", "cocoindex", "data-processing", "etl", "pipeline"]
categories = ["data-structures", "database", "science"]
exclude = ["examples/*", "tests/*"]

[workspace.dependencies]
#
# External dependencies (it looks like a lot but they're feature-gated)
anyhow = { version = "1.0.100", features = ["std"] }
async-openai = { version = "0.30.1", default-features = true }
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
aws-sdk-sqs = "1.92.0"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["query"] }
azure_core = "0.31.0"
azure_identity = { version = "0.21.0", default-features = false, features = [
  "enable_reqwest_rustls",
] }
azure_storage = { version = "0.21.0", default-features = false, features = [
  "enable_reqwest_rustls",
  "hmac_rust",
] }
azure_storage_blobs = { version = "0.21.0", default-features = false, features = [
  "enable_reqwest_rustls",
  "hmac_rust",
] }
base64 = "0.22.1"
blake3 = "1.8.3"
bytes = "1.11.0"
cfg-if = "1.0.4"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
const_format = "0.2.35"
derive-where = { version = "1.6.0", features = ["serde"] }
encoding_rs = "0.8.35"
env_logger = "0.11.8"
expect-test = "1.5.1"
futures = "0.3.31"
globset = "0.4.18"
google-cloud-aiplatform-v1 = { version = "1.5.0", default-features = false, features = [
  "prediction-service",
] }
google-cloud-gax = "1.5.0"
google-drive3 = "7.0.0"
hex = "0.4.3"
http = "1.4.0"
http-body-util = "0.1.3"
hyper-rustls = { version = "0.27.7" }
hyper-util = "0.1.19"
indenter = "0.3.4"
indexmap = { version = "2.13.0", features = ["serde"] }
indoc = "2.0.7"
infer = "0.19.0"
itertools = "0.14.0"
json5 = "1.3.0"
log = "0.4.29"
neo4rs = "0.8.0"
pgvector = { version = "0.4.1", features = ["halfvec", "sqlx"] }
phf = { version = "0.12.1", features = ["macros"] }
qdrant-client = "1.16.0"
rand = "0.9.2"
# ReCoco workspace crates
recoco = { path = "crates/recoco", version = "0.2.0" }
recoco-core = { path = "crates/recoco-core", version = "0.2.0" }
recoco-splitters = { path = "crates/recoco-splitters", version = "0.2.0" }
recoco-utils = { path = "crates/recoco-utils", version = "0.2.0" }
redis = { version = "1.0.2", features = ["connection-manager", "tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rustls = { version = "0.23.36" }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_with = { version = "3.16.1", features = ["base64"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "uuid",
] }
time = { version = "0.3.45", features = ["macros", "serde"] }
tokio = { version = "1.49.0", features = [
  "fs",
  "full",
  "macros",
  "rt-multi-thread",
  "sync",
  "tracing",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = "0.5.3"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicase = "2.9.0"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["serde", "v4", "v8"] }
yaml-rust2 = "0.11.0"
yup-oauth2 = "12.1.2"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
