# SPDX-FileCopyrightText: 2025-2026 CocoIndex (upstream)
# SPDX-FileContributor: CocoIndex Contributors
#
# SPDX-FileCopyrightText: 2026 Knitli Inc. (Recoco)
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "recoco-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Recoco-core is the core library of Recoco; it's nearly identical to the main Recoco crate, which is a simple wrapper around recoco-core and other sub-crates."
readme = "README.md"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
name = "recoco_core"
path = "src/lib.rs"

[dependencies]
# fingerprint feature used extensively in engine (component, context, environment, execution, function, id_sequencer, logic_registry, profile, target_state, txn_batcher) in inspect/db_inspect and state (db_schema, stable_path, target_state_path)
# deser feature used in execution, id_sequencer, db_inspect
# batching feature used in txn_batcher
# component.rs uses errors -- SharedError, SharedResult, SharedResultExt
recoco-utils = { path = "../utils", default-features = false, optional = true }

bytes = { workspace = true, optional = true }  # used in profile.rs
heed = { workspace = true, optional = true }  # used in environment, execution, id_sequence, txn_batcher, db_inspect, and db_schema.rs
indexmap = { workspace = true, optional = true }  # used in stats.rs
indicatif = { workspace = true, optional = true }  # used in stats.rs
rmp = { workspace = true, optional = true }  # execution, id_sequence, and target_state_path.rs
rmp-serde = { workspace = true, optional = true }  # execution, id_sequence, and target_state_path.rs
rpds = { workspace = true, optional = true }  # component, context, execution, target_state
serde = { workspace = true, features = ["derive", "rc"], optional = true }  # environment, db_schema, stable_path, target_state_path
serde_with = { workspace = true, optional = true }  # db_schema.rs
storekey = { workspace = true, optional = true }  # execution, db_schema, stable_path, target_state_path
tokio = { workspace = true, optional = true }  # prelude, component, context, execution, function, id_sequencer, runtime, stats, db_inspect
tokio-stream = { workspace = true, optional = true }  # db_inspect.rs
uuid = { workspace = true, optional = true }  # stable_path.rs

async-trait = { workspace = true, optional = true }  # prelude.rs, target_state.rs, and txn_batcher.rs
futures = { workspace = true, optional = true }  # prelude.rs, db_inspect.rs
tracing = { workspace = true, optional = true }  # prelude, component, runtime, target_state.rs
tracing-subscriber = { workspace = true, optional = true }  # runtime.rs

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Default: full engine with inspect capabilities enabled
default = ["engine", "inspect"]

# Core engine: async runtime, persistence (LMDB), state tracking, fingerprinting,
# and stats/progress display. Enables all engine/*, state/*, and runtime modules.
engine = [
    "batching",
    "dep:async-trait",
    "dep:bytes",
    "dep:futures",
    "dep:heed",
    "dep:indexmap",
    "dep:indicatif",
    "dep:rmp",
    "dep:rmp-serde",
    "dep:rpds",
    "dep:serde",
    "dep:serde_with",
    "dep:storekey",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:uuid",
    "dep:recoco-utils",
    "recoco-utils/batching",
    "recoco-utils/deserialize",
    "recoco-utils/fingerprint",
    "recoco-utils/heed",
    "recoco-utils/msgpack",
    "recoco-utils/storekey",
]

# Batching support (transaction batcher for LMDB write coalescing)
batching = ["dep:recoco-utils", "recoco-utils/batching"]

# Database inspection utilities (gates inspect/ module; requires tokio-stream)
inspect = ["engine", "dep:tokio-stream"]
