# SPDX-FileCopyrightText: 2025-2026 CocoIndex (upstream)
# SPDX-FileContributor: CocoIndex Contributors
#
# SPDX-FileCopyrightText: 2026 Knitli Inc. (ReCoco)
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ReCoco"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
name = "recoco"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true, optional = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
axum = { workspace = true }
axum-extra = { workspace = true }
azure_core = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
azure_storage = { workspace = true, optional = true }
azure_storage_blobs = { workspace = true, optional = true }
base64 = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
config = { workspace = true }
const_format = { workspace = true }
derive-where = { workspace = true }
encoding_rs = { workspace = true }
expect-test = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
google-cloud-aiplatform-v1 = { workspace = true, optional = true }
google-cloud-gax = { workspace = true, optional = true }
google-drive3 = { workspace = true, optional = true }
hex = { workspace = true }
http-body-util = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
indenter = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
infer = { workspace = true }
itertools = { workspace = true }
json5 = { workspace = true, optional = true }
log = { workspace = true }
neo4rs = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }
phf = { workspace = true }
qdrant-client = { workspace = true, optional = true }
rand = { workspace = true }
recoco-splitters = { workspace = true }
recoco-utils = { workspace = true, features = ["bytes_decode", "sqlx", "yaml"] }
redis = { workspace = true, optional = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicase = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
yaml-rust2 = { workspace = true }
yup-oauth2 = { workspace = true, optional = true }

[features]
default = ["source-local-file"]
all-functions = [
  "function-detect-lang",
  "function-embed",
  "function-extract-llm",
  "function-json",
  "function-split"
]
# Bundles
all-sources = [
  "source-azure",
  "source-gdrive",
  "source-local-file",
  "source-postgres",
  "source-s3"
]
all-targets = [
  "target-kuzu",
  "target-neo4j",
  "target-postgres",
  "target-qdrant"
]
full = ["all-functions", "all-sources", "all-targets"]
function-detect-lang = []
function-embed = [
  "dep:async-openai",
  "dep:google-cloud-aiplatform-v1",
  "dep:google-cloud-gax",
  "dep:json5",
  "dep:reqwest",
  "recoco-utils/openai",
  "recoco-utils/reqwest"
]
function-extract-llm = [
  "dep:async-openai",
  "dep:json5",
  "dep:reqwest",
  "recoco-utils/openai",
  "recoco-utils/reqwest"
]
function-json = ["dep:json5"]
# Functions
function-split = []
# Legacy
legacy-states-v0 = []
source-azure = [
  "dep:azure_core",
  "dep:azure_identity",
  "dep:azure_storage",
  "dep:azure_storage_blobs",
  "recoco-utils/azure"
]
source-gdrive = [
  "dep:google-drive3",
  "dep:http-body-util",
  "dep:hyper-rustls",
  "dep:hyper-util",
  "dep:yup-oauth2",
  "recoco-utils/google-drive"
]
# Sources
source-local-file = []
source-postgres = ["dep:pgvector", "recoco-utils/sqlx"]
source-s3 = [
  "dep:aws-config",
  "dep:aws-sdk-s3",
  "dep:aws-sdk-sqs",
  "dep:redis",
  "recoco-utils/redis"
]
target-kuzu = ["dep:reqwest", "recoco-utils/reqwest", "target-neo4j"]
target-neo4j = ["dep:neo4rs", "recoco-utils/neo4rs"]
# Targets
target-postgres = ["source-postgres"]
target-qdrant = ["dep:qdrant-client", "recoco-utils/qdrant"]
